--- a/abnreports.html
+++ b/abnreports.html
@@ -444,9 +444,9 @@
   <label>品質対応</label>
   <textarea id="qualityResponse" placeholder="品質判定履歴・備考など"></textarea>
 </div>
-          <div class="form-group"><label>技術対応 *</label>
+          <div class="form-group"><label>対応区分 *</label>
             <select id="techRequest" required>
-              <option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option>
+              <option value="">選択</option><option value="要請">技術・生技対応</option><option value="完結">完了</option>
             </select>
           </div>
 
@@ -712,7 +712,7 @@
           <summary style="cursor:pointer;font-weight:bold;color:#667eea;">対応ヘッダ（エクスポートと同じ）</summary>
           <div style="font-size:.9rem;color:#333;margin-top:8px;line-height:1.6;">
             必須: 整理No, 部署, 発生日, 異常内容, 対応内容<br>
-            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術対応, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応, 再発新規, 暫定, 状態, _id, 停止時間(分)
+            任意: ライン名, 発生時刻, 再開時刻, 遡り, 処置者, 技術対応, 技術処置者, 発見タイミング, 前回終物確認, 命数有無, 命数到達, 保全単位, 技術対応内容, 再発新規, 暫定, 状態, _id, 停止時間(分)
           </div>
         </details>
 
@@ -1248,7 +1248,7 @@ document.getElementById('btnClearFilter').addEventListener('click', async () => 
    const HEADER_MAP = {
     '整理No':'serialNo','部署':'department','ライン名':'lineName','発生日':'occurrenceDate',
     '発生時刻':'occurrenceTime','再開時刻':'restartTime','異常内容':'anomalyContent','対応内容':'actionTaken',
-    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','技術対応':'techRequest','技術技術内容有無':'techRequest',
+    '遡り':'traceback','品質対応':'qualityResponse','処置者':'handler','対応区分':'techRequest','技術技術内容有無':'techRequest',
     '技術処置者':'techHandler','発見タイミング':'discoveryTiming','前回終物確認':'previousCheck',
     '命数有無':'lifespan','命数到達':'lifespanReached','保全単位':'maintenanceUnit',
     '技術対応内容':'rootCauseAction','再発新規':'recurrenceType','対策状況':'measureStatus',
@@ -1281,7 +1281,7 @@ document.getElementById('btnClearFilter').addEventListener('click', async () => 
 const headers = [
   '整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)',
   '異常内容','対応内容','遡り','処置者',
-  '技術技術内容有無','技術処置者','発見タイミング','前回終物確認',
+  '対応区分','技術処置者','発見タイミング','前回終物確認',
   '命数有無','命数到達','保全単位',
   '技術対応内容','再発新規','対策状況','暫定','状態','_id'
 ];
@@ -1295,7 +1295,7 @@ const rows = anomalyCache.map(item=>{
     (stopMin!==null?stopMin:''),
     item.anomalyContent||'', item.actionTaken||'', item.traceback||'',　item.qualityResponse||'', item.handler||'',
     // 技術技術内容有無
-    item.techRequest==='要請'?'技術対応あり':item.techRequest==='完結'?'完了':'',
+    item.techRequest==='要請'?'技術・生技対応':item.techRequest==='完結'?'完了':'',
     item.techHandler||'', item.discoveryTiming||'', item.previousCheck||'',
     item.lifespan||'', item.lifespanReached||'', item.maintenanceUnit||'',
     // 技術対応内容
@@ -2339,7 +2339,7 @@ const centerHtml = `
                 ${item.maintenanceUnit ? `<div class="tech-info-item"><span class="tech-info-label">保全単位:</span><span class="tech-info-value">${item.maintenanceUnit}</span></div>` : ''}
                 ${item.recurrenceType ? `<div class="tech-info-item"><span class="tech-info-label">分類:</span><span class="tech-info-value">${item.recurrenceType}</span></div>` : ''}
                 ${item.lifespan ? `<div class="tech-info-item"><span class="tech-info-label">命数:</span><span class="tech-info-value">${item.lifespan}</span></div>` : ''}
-                ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">技術対応:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
+                ${item.rootCauseAction ? `<div class="tech-info-item" style="grid-column:1/-1;"><span class="tech-info-label">技術対応内容:</span><span class="tech-info-value">${item.rootCauseAction}</span></div>` : ''}
 ${(item.recurrenceType==='再発' && item.measureStatus) ? 
   `<div class="tech-info-item" style="grid-column:1/-1;">
      <span class="tech-info-label">対策状況:</span>
@@ -2409,8 +2409,8 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
           <thead><tr>
             <th>整理No</th><th>部署</th><th>ライン</th><th>発生日</th><th>発生時刻</th>
             <th>再開時刻</th><th>停止時間(分)</th><th>異常内容</th><th>処置内容</th><th>遡り</th><th>品質対応</th>
-            <th>処置者</th><th>技術対応</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
-            <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応</th><th>再発新規</th><th>対策状況</th>
+            <th>処置者</th><th>対応区分</th><th>技術処置者</th><th>発見タイミング</th><th>前回終物確認</th>
+            <th>命数有無</th><th>命数到達</th><th>保全単位</th><th>技術対応内容</th><th>再発新規</th><th>対策状況</th>
             <th>暫定</th><th>写真</th><th>状態</th><th>操作</th>
           </tr></thead>
           <tbody>
@@ -2433,7 +2433,7 @@ ${(item.recurrenceType==='再発' && item.measureStatus) ?
                   <td>${it.traceback||'-'}</td>
                   <td style="min-width:150px;">${(it.qualityResponse||'-').slice(0,50)}${(it.qualityResponse||'').length>50?'...':''}</td>
                   <td>${it.handler||'-'}</td>
-                  <td>${it.techRequest==='要請'?'技術対応':it.techRequest==='完結'?'発信部署完結':'-'}</td>
+                  <td>${it.techRequest==='要請'?'対応区分':it.techRequest==='完結'?'発信部署完結':'-'}</td>
                   <td>${it.techHandler||'-'}</td>
                   <td>${it.discoveryTiming||'-'}</td>
                   <td>${it.previousCheck||'-'}</td>
@@ -2706,7 +2706,7 @@ const editModalHtml = `
       <div class="form-group"><label>対応内容 *</label><textarea id="edit_actionTaken"></textarea></div>
       <div class="form-group"><label>遡り *</label><input type="text" id="edit_traceback"></div>
       <div class="form-group"><label>品質対応</label><textarea id="edit_qualityResponse" placeholder="品質判定履歴・備考など"></textarea></div>
-      <div class="form-group"><label>技術対応 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術対応あり</option><option value="完結">完了</option></select></div>
+      <div class="form-group"><label>対応区分 *</label><select id="edit_techRequest"><option value="">選択</option><option value="要請">技術・生技対応</option><option value="完結">完了</option></select></div>
     </div>
     <div id="editTech" class="edit-pane" style="display:none;">
       <div class="form-group"><label>技術処置者</label><input type="text" id="edit_techHandler"></div>
@@ -3136,7 +3136,7 @@ async function deleteRecord(id){
           <div><strong>異常内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.anomalyContent || '-'}</div></div>
           <div><strong>対応内容:</strong><div style="background:#fff;padding:12px;border-radius:6px;margin-top:8px;white-space:pre-wrap;">${item.actionTaken || '-'}</div></div>
           <div><strong>遡り:</strong> ${item.traceback || '-'}</div>
-          <div><strong>技術対応:</strong> ${item.techRequest === '要請' ? '技術対応あり' : '完了'}</div>
+          <div><strong>対応区分:</strong> ${item.techRequest === '要請' ? '技術・生技対応' : '完了'}</div>
         </div>
       </div>
       ${item.status === 'complete' && item.techRequest === '要請' ? `
@@ -3199,14 +3199,14 @@ async function deleteRecord(id){
   /* CSV出力 */
   document.getElementById('btnExport').addEventListener('click', ()=>{
     if (!anomalyCache.length){ alert('エクスポートするデータがありません'); return; }
-    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','技術対応','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応','再発新規','対策状況','暫定','状態','_id'];
+    const headers = ['整理No','部署','ライン名','発生日','発生時刻','再開時刻','停止時間(分)','異常内容','対応内容','遡り','処置者','対応区分','技術処置者','発見タイミング','前回終物確認','命数有無','命数到達','保全単位','技術対応内容','再発新規','対策状況','暫定','状態','_id'];
     const rows = anomalyCache.map(item=>{
       const stopMin = calcStopMinutes(item);
       return [
         item.serialNo||'',item.department||'',item.lineName||'',item.occurrenceDate||'',item.occurrenceTime||'',item.restartTime||'',
         (stopMin!==null?stopMin:''),
         item.anomalyContent||'',item.actionTaken||'',item.traceback||'',item.handler||'',
-        item.techRequest==='要請'?'技術対応あり':item.techRequest==='完結'?'完了':'',
+        item.techRequest==='要請'?'技術・生技対応':item.techRequest==='完結'?'完了':'',
         item.techHandler||'',item.discoveryTiming||'',item.previousCheck||'',item.lifespan||'',item.lifespanReached||'',
         item.maintenanceUnit||'',item.rootCauseAction||'',item.recurrenceType||'',item.measureStatus||'',item.affirmation||'',
         item.status==='complete'?'完了':'技術入力待ち', item._id
