--- a/dateview.html
+++ b/dateview.html
@@ -330,6 +330,35 @@
   .lines-grid{grid-template-columns:repeat(auto-fill, calc(140px * var(--pill-scale)))}
   .serials-grid{grid-template-columns:repeat(auto-fill, calc(140px * var(--pill-scale)))}
 }
+
+  /* === データシート全画面モード === */
+.datasheet-container.fullscreen {
+  position: fixed;
+  inset: 0;
+  z-index: 2000;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  border-radius: 0;
+  box-shadow: none;
+  background: var(--card);
+  display: flex;
+  flex-direction: column;
+}
+
+.datasheet-container.fullscreen .table-wrapper {
+  flex: 1;
+  max-height: none;
+}
+
+.datasheet-container.fullscreen .datasheet-toolbar {
+  border-radius: 0;
+}
+
+body.fullscreen-active {
+  overflow: hidden; /* 背景スクロール防止 */
+}
+
 </style>
 </head>
 <body>
@@ -418,6 +447,7 @@
         <div class="toolbar-actions">
           <button class="btn-tool" id="btnResetFilters">🔄 フィルタリセット</button>
           <button class="btn-tool" id="btnResetSort">↕️ ソートリセット</button>
+            <button class="btn-tool" id="btnFullscreen">🖥️ 全画面</button>
         </div>
       </div>
       <div class="table-wrapper">
@@ -2003,6 +2033,17 @@ function reorderColumns(fromId, toId){
   });
 
   document.getElementById('btnResetSort').addEventListener('click',()=>{ currentSort={column:null,direction:'asc'}; renderTable(); });
+// === 全画面表示機能 ===
+const btnFullscreen = document.getElementById('btnFullscreen');
+const sheet = document.querySelector('.datasheet-container');
+let isFullscreen = false;
+
+btnFullscreen.addEventListener('click', () => {
+  isFullscreen = !isFullscreen;
+  sheet.classList.toggle('fullscreen', isFullscreen);
+  document.body.classList.toggle('fullscreen-active', isFullscreen);
+  btnFullscreen.textContent = isFullscreen ? '🔙 戻る' : '🖥️ 全画面';
+});
 
   (async()=>{
     const ok=await checkAuth(); if(!ok){ alert('認証が必要です'); return; }
