--- a/dateview.html
+++ b/dateview.html
@@ -267,7 +267,7 @@
   .photo-btn:disabled{background:#ccc;cursor:not-allowed}
 
   /* 詳細モーダル */
-  .modal{display:none;position:fixed;inset:0;background:var(--backdrop);z-index:1000;align-items:center;justify-content:center}
+  .modal{display:none;position:fixed;inset:0;background:var(--backdrop);z-index:5000;align-items:center;justify-content:center}
   .modal.active{display:flex}
   .modal-content{background:var(--card);border-radius:16px;max-width:900px;width:95%;max-height:90vh;overflow-y:auto;box-shadow:0 20px 60px rgba(0,0,0,.3);border:1px solid var(--border)}
   .modal-header{padding:24px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;background:var(--card);z-index:10;gap:12px}
@@ -2033,6 +2033,16 @@ function reorderColumns(fromId, toId){
   });
 
   document.getElementById('btnResetSort').addEventListener('click',()=>{ currentSort={column:null,direction:'asc'}; renderTable(); });
+  // === Esc で詳細モーダルを閉じる ===
+window.addEventListener('keydown', (e)=>{
+  if (e.key === 'Escape') {
+    const modal = document.getElementById('detailModal');
+    if (modal && modal.classList.contains('active')) {
+      modal.classList.remove('active');
+    }
+  }
+});
+
 // === 全画面表示機能 ===
 const btnFullscreen = document.getElementById('btnFullscreen');
 const sheet = document.querySelector('.datasheet-container');
