--- a/dateview.html
+++ b/dateview.html
@@ -542,6 +542,22 @@ body.fullscreen-active {
   </div>
 
 <script type="module">
+
+  // === Canvasの実ピクセル解像度をCSSサイズに同期（未定義なら定義） ===
+if (typeof window.ensureCanvasResolution !== 'function') {
+  window.ensureCanvasResolution = function ensureCanvasResolution(canvas){
+    if (!canvas) return;
+    const dpr  = window.devicePixelRatio || 1;
+    const cssW = Math.floor(canvas.clientWidth || 120);
+    // getComputedStyle().height は "28px" のような文字列なので parseFloat
+    const cssH = Math.floor(parseFloat(getComputedStyle(canvas).height) || 40);
+    const needW = Math.max(1, Math.floor(cssW * dpr));
+    const needH = Math.max(1, Math.floor(cssH * dpr));
+    if (canvas.width  !== needW) canvas.width  = needW;
+    if (canvas.height !== needH) canvas.height = needH;
+  };
+}
+
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js';
   import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, setPersistence, browserLocalPersistence } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js';
   import { getFirestore, collection, getDocs, query, orderBy } from 'https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js';
