--- a/dateview.html
+++ b/dateview.html
@@ -786,16 +786,11 @@ function getDeptRolling30dAvgRate(dept){
 
 // 色決定：フィルター平均 <= 30日平均 なら「緑」、超えると「赤」。
 // どちらも0なら青（ニュートラル）
-function getDeptSparkColor(dept){
-  const cur = getDeptFilteredAvgRate(dept);
-  const base = getDeptRolling30dAvgRate(dept);
-
-  if (base === 0 && cur === 0) return 'rgba(66,133,244,0.85)'; // データなし：青
-  // しきい値を少し緩めたい場合は以下のイプシロンを調整（±5%）
-  const eps = Math.max(0.0001, base * 0.05);
-  return (cur <= base + eps) ? 'rgba(22,163,74,0.95)'     // 緑（良化 or 同等）
-                             : 'rgba(239,68,68,0.95)';    // 赤（悪化）
+// これまでの比較ロジックは不要。常に中立色で。
+function getDeptSparkColor(/* dept */){
+  return 'rgba(66,133,244,0.85)'; // 中立の青系
 }
+
 
 
   /* ===== 認証・ロード ===== */
