--- a/abnreports.html
+++ b/abnreports.html
@@ -548,7 +548,7 @@
           <select id="lifespanReached" required>
             <option value="">選択</option>
             <option value="至">至</option>
-            <option value="不達">不達</option>
+            <option value="未">未</option>
           </select>
         </div>
         <div class="form-group"><label>保全単位</label><input type="text" id="maintenanceUnit"></div>
@@ -2803,7 +2803,7 @@ const editModalHtml = `
         <select id="edit_lifespanReached">
           <option value="">選択</option>
           <option value="至">至</option>
-          <option value="不達">不達</option>
+          <option value="未">未</option>
         </select>
       </div>
       <div class="form-group"><label>保全単位</label><input type="text" id="edit_maintenanceUnit"></div>
