--- a/chokotei.html
+++ b/chokotei.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>異常履歴ダッシュボード（48h＋トレンド 即時反映＋自動読込）</title>
+<title>異常履歴ダッシュボード</title>
 
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
