--- a/chokotei.html
+++ b/chokotei.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>異常履歴ダッシュボード</title>
+<title>設備異常履歴ダッシュボード</title>
 
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -180,7 +180,7 @@
   <div class="header">
     <div class="header-row">
       <div>
-        <h1>🔍 異常履歴ダッシュボード</h1>
+        <h1>設備異常履歴ダッシュボード</h1>
         <div class="sub">直近48時間の状況を強調＋トレンドで対策効果を可視化</div>
       </div>
       <div class="row">
